bugfix add test case
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@24 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/TODO
+++ b/TODO
@@ -20,6 +20,8 @@
 
 ** file-select, message-edit can kill-buffer when commiting.
 
+** complete revision with electric select
+
 * magic
 ** `fsvn-magic-directory-files' accept svn:externals
 
@@ -77,6 +79,9 @@
 
 * prop-mode
 
+** prop-recursive-mode
+
+proplist --recursive
 
 * diff
 ** async diff
