fix some warnings revoke fsvn-svk add some testcase
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@26 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-05-15  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Refactor: fsvn-find-logs-entry -> fsvn-logs-find-logentry
+	* Refactor: fsvn-log-create-path-chain -> fsvn-logs-create-path-chain
+	* Refactor: fsvn-log-chain-find -> fsvn-logs-chain-find
+	* Refactor: fsvn-popup.el functions to fsvn-popup namespace.
+
 2010-05-11  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Fix: fsvn-browse-commit-path
