some fix implements electric util
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@30 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-19  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Fix: fsvn-make.el
+	       Unable compile emacs current version.
+
 2010-05-15  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Refactor: fsvn-find-logs-entry -> fsvn-logs-find-logentry
