remove cl code bugfix
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@32 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2010-05-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
+	* Fix: remove obsoleted variable default-buffer-file-coding-system
+
 	* Fix: fsvn-log-sibling path is broken. Destructive `sort'.
 
 	* Change: fsvn-browse-mode
