move experimental function

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-05-24  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Add: AutoCheck.sh
+
 2010-05-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Change: Unsupport 1.4.x
