--- a/TODO
+++ b/TODO
@@ -35,6 +35,9 @@ svn://localhost/some 5050 some log message
 
 ** Activate only magic name.
 
+** font-lock not works fine some cases.
+consider `font-lock-fontify' call or not
+
 * magic
 ** `fsvn-magic-directory-files' accept svn:externals
 
