--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-07-22  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Fix: Unterminated message.
+
+	* Fix: Change mode-name.
+
 2010-07-10  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Add: Complete revision by `svn log'.
