small fix can create patch
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@140 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-04  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Add: Can create patch.
+
 2010-08-03  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Improvement: Make `svn diff' asynchrounous.
