--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2010-08-04  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
+	* Add: Easy Menu (browse, log)
+
 	* Add: Can create patch.
 
 2010-08-03  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
