--- a/DOC/Wiki/howto/basicuse-ja.wiki
+++ b/DOC/Wiki/howto/basicuse-ja.wiki
@@ -29,7 +29,7 @@ C-c C-d|`dired-mode' へ切り替える
 ----
 C-c C-c|メッセージの編集を終えて確定する
 C-c C-k|メッセージの編集内容を破棄する
-C-c C-o|関係するバッファがあれば切り替える
+C-c C-o|バッファを切り替える
 &#61; &#61;|対象ファイルがバージョン管理下にある場合に diff を実行する (`fsvn-select-file-mode' のみ)
 &#61; e|&#61; &#61; と同じだが ediff を使用する
 ----
@@ -58,4 +58,19 @@ C-c C-c|編集内容を保存する
 C-c C-k|編集内容を破棄する
 C-c C-o|`fsvn-proplist-mode'へ移動する
 C-c C-r|編集内容を保存するときに再帰的に保存するようマークをつける
+----
+** `fsvn-process-list-mode' でよく使うコマンド
+----
+d|カーソル位置のプロセスに削除用マークをつける
+m|カーソル位置のプロセスにマークをつける
+u|カーソル位置のプロセスにつけられたマークを外す
+x|マークされたプロセスへの操作を実行する
+C-c C-t|fsvn の管理下にないプロセスの表示を切り替える
+C-c C-p|マークしたプロセスへパスワードを送信する
+C-m|カーソル位置のプロセスのバッファを表示する(バッファの操作に注意)
+C-c C-k|終了する
 
+----
+** わからないことは
+----
+[[qa-ja.wiki][Q and A]]
