--- a/DOC/Wiki/howto/install-en.wiki
+++ b/DOC/Wiki/howto/install-en.wiki
@@ -20,3 +20,8 @@
 ** .emacs (Option)
 ----
 [[http://sourceforge.jp/projects/fsvn/svn/view/trunk/Samples/dot.emacs?view=markup&root=fsvn][dot.sample]]
+
+----
+** For more information.
+----
+[[qa-en.wiki][Q and A]]
