--- a/TODO
+++ b/TODO
@@ -14,8 +14,6 @@
 
 ** file-select, message-edit can kill-buffer when commiting.
 
-** interactive-p -> called-interactively-p
-
 ** Bugreport
 
 ** about SVN_SSH
@@ -31,6 +29,10 @@ buffer name start with ` ' (space)
 ** to configure ex: C-c C-u
 
 ** search log diff and message
+
+** describe doc about process-list 
+enable send password
+freezing processes.
 
 * magic
 ** `fsvn-magic-directory-files' accept svn:externals
