--- a/DOC/Wiki/howto/basicuse-ja.wiki
+++ b/DOC/Wiki/howto/basicuse-ja.wiki
@@ -29,7 +29,7 @@ C-c C-d|`dired-mode' へ切り替える
 ----
 C-c C-c|メッセージの編集を終えて確定する
 C-c C-k|メッセージの編集内容を破棄する
-C-c C-o|バッファを切り替える
+C-c C-o|関係するバッファに切り替える
 &#61; &#61;|対象ファイルがバージョン管理下にある場合に diff を実行する (`fsvn-select-file-mode' のみ)
 &#61; e|&#61; &#61; と同じだが ediff を使用する
 ----
