support fancy mode-line
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@163 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-09-15  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Add: fancy modeline (from psvn.el)
+
 2010-08-31  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Add: fsvn-open-repository
