--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-09-18  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Add: fsvn-browse-create-patch-path bound to `= P'
+	       fsvn-browse-create-patch-selected bound to `= p'
+
 2010-09-15  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Add: fancy modeline (from psvn.el)
