--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-10-09  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Release: 0.9.7
+
 2010-10-08  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Change: expire temp files 2 days -> 5 days
