small refactor and new idea
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@187 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/TODO
+++ b/TODO
@@ -110,6 +110,9 @@ revision range and log base url
 
 
 ** log-sibling return to specific revision file. (use magic file name)
+** patch
+property is changed created patch wrong??
+
 * prop-mode
 
 ** prop-recursive-mode
@@ -144,6 +147,16 @@ proplist --recursive
 
 
 ** git
+
+
+*** like `git stash'
+
+
+stash id is stash date {yyyyMMddHHmmss}
+
+md5 is directory by directory-file-name.
+
+~/.fsvn/stash/{md5 of directory name}/{yyyyMMddHHmmss}
 
 * svk
 
