fix doc new implements
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@188 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-11-13  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Add: fsvn-vc-commit-non-query
+
 2010-10-19  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Add: fsvn-browse-smart-move-this bound to `C-c C-b C-m'
