officially unsupport emacs 22
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@202 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-12-30  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Delete: Unsupport Emacs 22 officially.
+
 2010-12-17  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Add: fsvn-vc-commit-non-query-message
