fix coloring in blame-minor mode
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@204 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-01-03  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Add: Blame minor mode accept changings.
+
 2010-12-31  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Fix: a lot of commit buffer problem
