fix blame color
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@205 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/TODO
+++ b/TODO
@@ -132,7 +132,7 @@ proplist --recursive
 
 ** TODO dired-mode remove vc-find-file-hook from find-file-hook
 
-** fsvn-blame-minor-mode more efficient UI
+** fsvn-blame-minor-mode color
 
 ** fsvn-blame-minor-mode accept revision range
 
