--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2011-01-22  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Fix: ediff temp file problem.
+
+2011-01-21  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Fix: fsvn-blame-minor-mode destroy isearch overlay.
+
+	* Fix: default-directory is wrong in browse mode confirmer.
+
+	* Fix: respect to `dired-deletion-confirmer'
+
+	* Add: `fsvn-blame-minor-mode-with-range' bind to nothing.
+
 2011-01-16  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Add: easymenu (file-select)
