--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-01-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Release: 0.9.9
+
 2011-01-22  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Fix: ediff temp file problem.
