--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2011-01-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
+	* Fix: Again misunderstanding of url @
+
 	* Fix: misunderstanding of url @
 
 	* Release: 0.9.9
