--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 # -*- mode: org; -*-
 * General
+** piki and html
+add updated date and time
 ** annoying fsvn-result buffer.
 
 ** `merge' can use ediff-merge
