git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@228 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/TODO
+++ b/TODO
@@ -117,6 +117,7 @@ proplist --recursive
 ** diff directory
 ** diff binary file invoke filter program. (Like OpenOffice file)
 
+** ediff different coding-system
 
 * Other
 ** improve the UI about read arguments (ex --targets like argument not necessary in completion)
