improve bit colorize diff
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@229 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-02-13  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Change: diff buffer to read-only
+
+	* Add: Bit colorize diff
+
 2011-02-12  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Fix: Cleanup window error.
