--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Visit http://fsvn.sourceforge.jp/
+Visit http://fsvn.sourceforge.jp/ to read instructions
 
 Mirroring repository from svn+ssh://svn.sourceforge.jp/svnroot/fsvn/
 
