--- a/TODO
+++ b/TODO
@@ -48,6 +48,10 @@ inhibit path completion.
 ** Consider using uuid string as message id directory
 fsvn-message-edit-get-message-directory
 
+** fsvn-*-default-args
+
+Too complicated!
+
 * magic
 ** `fsvn-magic-directory-files' accept svn:externals
 
