--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-03-19  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Release: 0.9.11
+
 2011-03-08  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Change: fsvn-log-list-mark-searched -> fsvn-log-list-mark-regexp
