--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-03-29  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Add: More elegant fancy mode-line.
+
 2011-03-19  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Release: 0.9.11
