fix signature libxml support (only emacs current)
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@249 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-04-24  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Improvement: Use `libxml-parse-xml-region' if exists.
+
 2011-03-31  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Fix: advice problem.
