async repository browser
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@265 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 
 	* Fix: remove `remove-if' warning
 
+	* Improvement: async repository browser.
+
 	* Release: 0.9.12
 
 2011-08-18  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>
