--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Visit http://fsvn.sourceforge.jp/ to read all instructions.
+Please visit http://fsvn.sourceforge.jp/ to read all instructions.
 
 git@github.com:mhayashi1120/Emacs-fsvn.git is mirroring repository from svn+ssh://svn.sourceforge.jp/svnroot/fsvn/
