--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2011-10-27  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>
 
+	* Add: `fsvn-upgrade' (from svn 1.7.x)
+
 	* Fix: prepare to support svn 1.7.x
 
 2011-09-23  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>
